<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flockers</string>
    <string name="I_m_in">I m in</string>
    <string name="action_settings">Settings</string>
    <string name="show">Show</string>
    <string name="I_would_like_to">I Would Love To</string>
    <string name="CreateEvent">Create Event</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_event_detail">Event Detail</string>
    <string name="title_activity_event_search">Search Event</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="ename">Event Name</string>
    <string name="verb">Verb</string>
    <string name="activity">Activity</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="fees">Fees</string>
    <string name="prize">Prize</string>
    <string name="description">Description</string>
    <string name="Create">Create</string>
    <string name="delete">Delete</string>
    <string name="out">Out</string>
    <string name="participate">Participate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernamet">Username</string>
    <string name="passwordt">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signin">Sign in</string>
    <string name="noAccountHelp">"Don't have account?"</string>
    <string name="signup">Sign up</string>
    <string name="uname">User Name</string>
    <string name="title_activity_lauch">Lauch</string>

</resources>
