<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ty"
    tools:context=".LoginActivity" >
          
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/usernamet" />

   <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true" 
        android:hint="@string/passwordt" />"

	<Button
	    android:id="@+id/signin"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/password"
	    android:layout_below="@+id/password"
	    android:layout_marginTop="42dp" 
	    android:onClick="login"
	    android:text="@string/signin"
	    android:textColor="#fff"
        android:background="@drawable/rounded_edittext"
	    />
	<Button 
	    android:id="@+id/signup"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/password"
	    android:layout_below="@+id/password"
	    android:layout_marginTop="110dp" 
	    android:text="@string/signup"
	    android:textColor="#fff"
        android:background="@drawable/rounded_edittext"
        android:onClick="signup"
	    />

</RelativeLayout>