<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/ty"
    android:fitsSystemWindows="true">
    <LinearLayout
    android:id="@+id/LLename"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">  
	    <TextView
	        android:id="@+id/ename"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:ems="10" 
	        android:hint="@string/ename"/>
	    <TextView
	        android:id="@+id/eventName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
	</LinearLayout>
	
    <LinearLayout
    android:id="@+id/LLdate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
    
	    <TextView
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:hint="@string/date"
	        android:inputType="date"/>
	    <TextView
	        android:id="@+id/Date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/LLtime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
	    <TextView
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:ems="10" 
	        android:hint="@string/time"/>
	    <TextView
	        android:id="@+id/Time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
	 </LinearLayout>
	 <LinearLayout
    android:id="@+id/LLplace"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
    
	    <TextView
	        android:id="@+id/place"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:ems="10" 
	        android:hint="@string/place"/>
	    <TextView
	        android:id="@+id/Place"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
	 </LinearLayout>
	 <LinearLayout
    android:id="@+id/LLfees"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
	    <TextView
	        android:id="@+id/fees"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:ems="10" 
	        android:hint="@string/fees"/>
	    <TextView
	        android:id="@+id/Fees"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
	</LinearLayout>
    <LinearLayout
    android:id="@+id/LLprize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
	    <TextView
	        android:id="@+id/prize"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColorHint="#754719"
	        android:ems="10" 
	        android:hint="@string/prize"/>
	    <TextView
	        android:id="@+id/Prize"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"/>
	</LinearLayout>
	<LinearLayout
    android:id="@+id/LLdescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
    
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
	    android:textColorHint="#754719"
        android:ems="10" 
        android:hint="@string/description"/>
    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"/>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/LLbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
    
    <Button
        android:id="@+id/participate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="17dp"
        android:onClick="participate"
        android:text="@string/participate" 
        android:textColor="#fff"
        android:background="@drawable/rounded_edittext"
        android:layout_marginLeft="70dp"/>
    </LinearLayout>

</LinearLayout>
